--- a/index.html
+++ b/index.html
@@ -186,13 +186,8 @@
                             <p>My passion for tennis grew multi-fold in 2019, but then Covid19 hit which made me sit inside the home.</p>
                             <p>This gave me some opportunity to explore other interests. I started learning Piano by myself using an app called, Yousician.</p>
                             <p>I also started watching quality content on Youtube to enhance my knowledge about the world.</p>
-                            <p>And that is how I developed my interests in these 3 areas: Tennis (Sports), Piano (Arts) and Entrepreneurship!</p>
-                            <p>This is where I stand in each of the categories:</p>
-                            <ul>
-                                <li>Sports: Ranked 70 in Tennis Boys 14 category in California</li>
-                                <li>Entrepreneur: Run a Spotify channel with 50+ episodes</li>
-                                <li>Arts: Learning for over 2 years</li>
-                            </ul>
+                            <p>And that is how I developed my interests in these Tennis, Piano and Entrepreneurship!</p>
+                            <p>Now, I am ranked in top 100 tennis players in Boys 14 category in California, successfully running a Spotify channel to share knowledge and have been playing piano for about 2 years.</p>
                         </div>
                     </div>
                 </div>
