some opportunty -> opportunities

--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
                             <h2>My Journey</h2>
                             <p>Born in Bengaluru, India, I spent my life's initial 8 years in India before moving to United States at the age of 8 in 2018.</p>
                             <p>My passion for tennis grew multi-fold in 2019, but then Covid19 hit which made me sit inside the home.</p>
-                            <p>This gave me some opportunity to explore other interests. I started learning Piano by myself using an app called, Yousician.</p>
+                            <p>This gave me opportunities to explore other interests. I started learning Piano by myself using an app called, Yousician.</p>
                             <p>I also started watching quality content on Youtube to enhance my knowledge about the world.</p>
                             <p>And that is how I developed my interests in these Tennis, Piano and Entrepreneurship!</p>
-                            <p>Now, I am ranked in top 100 tennis players in Boys 14 category in California, successfully running a Spotify channel to share knowledge and have been playing piano for about 2 years.</p>
+                            <p>Now, I am ranked in top 100 tennis players in Boys 14 category in Northen California, successfully running a Spotify channel to share knowledge and have been playing piano for about 2 years.</p>
                         </div>
                     </div>
                 </div>
