--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <div class="row">
                         <div class="home-wrapper">
                             <div class="col-md-10 col-md-offset-1">
-                                <div class="home-content">
+                                <!--div class="home-content"-->
                                     <h1>KNOWLEDGE GROOVE</h1>
                                     <h2>By Ishaan Garg</h2>
-                                </div>
+                                <!--/div-->
                             </div>
                         </div>
                     </div>
@@ -82,22 +82,22 @@
                             <p>So, practice by conversing with me. Choose your preferences using the google form below and you will receive a meeting invite.</p>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <div class="single_service_right">
-                                <h2>Available Slots in PST</h2>
+                            <!--div class="single_service_right"-->
+                                <h3>Available Slots in PST</h3>
                                 <ul>
                                     <li>Monday: 7:00-7:30pm, 7:30-8:00pm</li>
                                     <li>Tuesday: 7:00-7:30pm, 7:30-8:00pm</li>
                                     <li>Wednesday: 7:00-7:30pm, 7:30-8:00pm</li>
                                     <li>Thursday: 7:00-7:30pm, 7:30-8:00pm</li>
                                 </ul>
-                            </div>
+                            <!--/div-->
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <div class="single_service_right">
-                                <h2>Testimonials</h2>
+                            <!--div class="single_service_right"-->
+                                <h3>Testimonials</h3>
                                 <p>Helped 10 students so far and growing...</p>
-                                <h2><a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScHsjf6vJTuA-ywGW2I0YWAm4l_d3E-mpijLzqvYri4Hhda_g/formResponse">Google Form</a></h2>
-                            </div>
+                                <p><a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScHsjf6vJTuA-ywGW2I0YWAm4l_d3E-mpijLzqvYri4Hhda_g/formResponse">Google Form</a></p>
+                            <!--/div-->
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                     <div class="main_service2">
                         <div class="head_title text-center">
                             <!-- h2>Learn</h2-->
-                            <div class="single_service_left">
+                            <div class="single_service_right">
                                 <a href="https://open.spotify.com/show/5GgvbJT6WznJCmIX6OeEGy?si=f4a3dc16e02b444e"><img src="assets/images/kg-logo.png" alt=""/></a>
                             </div>
                             <p>My Spotify Channel named "The Knowledge Groove" is a collection of short episodes where I talk about various educational topics and key events regarding History, Geopolitics, Business and Science in a simple and interesting way.</p>
@@ -121,19 +121,19 @@
                             <!--div class="single_service_left">
                                 <img src="assets/images/flaticon1.png" alt="" />
                             </div-->
-                            <div class="single_service_right">
+                            <!--div class="single_service_right"-->
                                 <h2><a href="https://open.spotify.com/episode/7yiyuQ61bhTruueTPG1Zdy?si=foQefiRFTxyh4N9UOs4S7w">GDP Explained</a></h2>
                                 <p>In this episode, I explain everything about GDP, from its versatile uses, how it is measured, the difference between the 2 types of GDP, and its plus points and flaws. A very interesting episode that teaches you all about this important economic indicator.</p>
-                            </div>
+                            <!--/div-->
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <!--div class="single_service_left">
                                 <img src="assets/images/flaticon2.png" alt="" />
                             </div-->
-                            <div class="single_service_right">
+                            <!--div class="single_service_right"-->
                                 <h2><a href="https://open.spotify.com/episode/62L4QqG5TKZjURaRFFSUVn?si=Qxn66lrLR9unvGNCuXU9YQ">The Shocking Downfall of Soviet Union</a></h2>
                                 <p>In this episode, you will understand the complete story of the downfall and the disintegration of the Soviet Union along with how this nation was formed in the first place..</p>
-                            </div>
+                            <!--/div-->
                         </div>
                     </div>
                 </div>
