--- a/index.html
+++ b/index.html
@@ -31,19 +31,15 @@
     </head>
     <body>
         <nav class="navbar navbar-default">
-            <div class="container">
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-center">
-                        <li class="active"><a href="#home">Home</a></li>
-                        <li><a href="#practice">Practice</a></li>
-                        <li><a href="#learn">Learn</a></li>
-                        <li><a href="#courses">Courses</a></li>
-                        <li><a href="#about">About me</a></li>
-                    </ul>
-
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-center">
+                    <li class="active"><a href="#home">Home</a></li>
+                    <li><a href="#practice">Practice</a></li>
+                    <li><a href="#learn">Learn</a></li>
+                    <li><a href="#courses">Courses</a></li>
+                    <li><a href="#about">About me</a></li>
+                </ul>
+            </div>
         </nav>
 
         <!--Home page style-->
