--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
-        <nav class="navbar navbar-default">
+        <!--nav class="navbar navbar-default">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-center">
                     <li class="active"><a href="#home">Home</a></li>
@@ -40,7 +40,7 @@
                     <li><a href="#about">About me</a></li>
                 </ul>
             </div>
-        </nav>
+        </nav-->
 
         <!--Home page style-->
         <header id="home" class="home greenbg">
