--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 						<li><a class="wow fadeInUp" href="https://instagram.com/" data-wow-delay="0.6s"><i class="fa fa-instagram"></i></a></li>
 					</ul>
 				</div>
-			<div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Juke 2015 - Template by <a href="http://www.webthemez.com">Webthemez</a></div>
+			<!--div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Juke 2015 - Template by <a href="http://www.webthemez.com">Webthemez</a></div-->
 			<a href="#" class="scrollToTop"><i class="fa fa-arrow-circle-o-up"></i></a>
 		</div>
 	</div>
