--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 			  <div id="navbar-scroll" class="collapse navbar-collapse navbar-themers navbar-right">
 				<ul class="nav navbar-nav">
-					<li><a href="#intro">About</a></li>
+					<li><a href="#intro">What is The Knowledge Groove?</a></li>
 					<li><a href="#feature">Features</a></li>
 					<li><a href="#subscribe">Subscribe</a></li>
 					<li><a href="#screenshot">Screenshots</a></li>
@@ -68,14 +68,16 @@
 				<div class="col-md-6">
 
 						<h1 class="wow fadeInLeft">
-						Knowledge is the best weapon
+						Welcome to The Knowledge Groove
 						</h1>
 
 					<div class="landing-text wow fadeInLeft">
-						<p>Lorem Ipsum is simply dummy text of the printing and type setting industry consectetur adipisicing elit, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing tempor incididunt!</p>
+						<p> Knowledge Is The Best Weapon Known to Mankind</p>
 					</div>
 
+					
 					<!-- header button -->
+					<!--
 					<div class="head-btn wow fadeInLeft">
 						<a href="#" class="btn-primary app-store">
 						<i class="fa fa-apple"></i> <span> App Store</span>
@@ -84,7 +86,7 @@
 						<i class="fa fa-android"></i> <span> Google Play</span>
 						</a>
 					</div>
-
+				-->
 
 
 				</div>
@@ -110,9 +112,8 @@
 
 			<!-- feature content -->
 			<div class="col-md-6 wow fadeInRight">
-				<h2>Learn how to make your app marketing efficient</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset.
-				</p>
+				<h2>What is The Knowledge Groove?</h2>
+				<p> At the Knowledge Groove, we believe that learning should be an engaging and dynamic experience. We are a dedicated language school helping with our services globally and a thought-provoking podcast series focusing on empowering people by providing them with interesting knowledge. <bold></bold> </p>
 
 					<div class="btn-section"><a href="#download" class="btn-default">Download Now</a></div>
 
@@ -130,8 +131,8 @@
 			<div class="col-md-10 col-md-offset-1 col-sm-12 text-center feature-title">
 
 			<!-- feature title -->
-				<h2>Our Amazing beautiful features</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+				<h2>Our Services for the people</h2>
+				<p>We always work for the people, with the people!</p>
 			</div>
 		</div>
 		<div class="row row-feat">
@@ -142,8 +143,8 @@
 				<div class="col-sm-4 feat-list">
 					<i class="fa fa-paint-brush wow fadeInUp"></i>
 					<div class="inner">
-						<h4>Fully Customizable</h4>
-						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.
+						<h4>The Knowledge Groove Podcast</h4>
+						<p> The Knowledge Groove Podcast is a platform where we dive into a wide range of fascinating topics across history, science, business, and economics. Whether it's the story behind a historical event, the rise of a global brand, or a deep dive into the groundbreaking scientific discoveries, we aim to share interesting and though-provoking information that sparks curiosity and inspires learning. 
 						</p>
 					</div>
 				</div>
@@ -152,12 +153,12 @@
 				<div class="col-sm-4 feat-list">
 					<i class="fa fa-rss wow fadeInUp" data-wow-delay="0.2s"></i>
 					<div class="inner">
-						<h4>Responsive Design</h4>
-						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
+						<h4>The Knowledge Groove/ Ishaan Garg Academy</h4>
+						<p> At the Knowledge Groove, we believe that learning anything is about connecting with the world around you. Through interactive lessons and real-world conversations, we empower students to improve their English and much more. Whether you are preparing for an exam, enhancing your career, or simply looking to be more confident, our courses are for you.</p>
 					</div>
 				</div>
 
-				<!-- feature 3 -->
+				<!--
 				<div class="col-sm-4 feat-list">
 					<i class="fa fa-recycle wow fadeInUp" data-wow-delay="0.4s"></i>
 					<div class="inner">
@@ -165,7 +166,7 @@
 						<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
 					</div>
 				</div>
-
+			-->
 
 			</div>
 		</div>
@@ -175,7 +176,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-6 wow fadeInRight animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s; -webkit-animation-delay: 0.8s; animation-name: fadeInRight; -webkit-animation-name: fadeInRight;">
-                    <h2 class="title">Our Focused on Feature</h2>
+                    <h2 class="title"> Check it out!</h2>
 
                     <div class="feature-item">
 
@@ -184,8 +185,8 @@
                                 <i class="fa fa-paint-brush"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">Reliable and Secure Platform</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisici ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea com</p>
+                                <h4 class="media-heading"> A thought-provoking everyone must listen to! </h4>
+                                <p> Link: https://open.spotify.com/show/5GgvbJT6WznJCmIX6OeEGy?si=5434d6dd02f74782 </p>
                             </div>
                         </div>
                     </div>
@@ -197,8 +198,8 @@
                                 <i class="fa fa-rss"></i>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading">Everything is perfectly orgainized</h4>
-                                <p>Aipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+                                <h4 class="media-heading"> An Academy focused on helping you </h4>
+                                <p> Register Now!: </p>
                             </div>
                         </div>
                     </div>
