--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 			  <div id="navbar-scroll" class="collapse navbar-collapse navbar-themers navbar-right">
 				<ul class="nav navbar-nav">
 					<li><a href="#intro">What is The Knowledge Groove?</a></li>
-					<li><a href="#feature">Features</a></li>
-					<li><a href="#subscribe">Subscribe</a></li>
-					<li><a href="#screenshot">Screenshots</a></li>
-					<li><a href="#clients">Clients</a></li>
-					<li><a href="#package">Package</a></li>
-					<li><a href="#download">Download</a></li>
+					<li><a href="#feature">Services</a></li>
+					<!--li><a href="#subscribe">Subscribe</a></li-->
+					<li><a href="#screenshot">Gallery</a></li>
+					<li><a href="#clients">Testimonials</a></li>
+					<li><a href="#package">About Me</a></li>
+					<!--<li><a href="#download">Download</a></li>-->
 				</ul>
 			  </div>
 		</div>
@@ -115,7 +115,7 @@
 				<h2>What is The Knowledge Groove?</h2>
 				<p> At the Knowledge Groove, we believe that learning should be an engaging and dynamic experience. We are a dedicated language school helping with our services globally and a thought-provoking podcast series focusing on empowering people by providing them with interesting knowledge. <bold></bold> </p>
 
-					<div class="btn-section"><a href="#download" class="btn-default">Download Now</a></div>
+				<!-- <div class="btn-section"><a href="#download" class="btn-default">Download Now</a></div> -->
 
 			</div>
 
@@ -226,21 +226,18 @@
         </div>
     </section>
 
-
-<!-- subscribe section -->
+<!-- subscribe section
 <div id="subscribe">
 	<div class="subscribe fullscreen parallax" style="background-image:url('images/bg.jpg');" data-img-width="1920" data-img-height="1281" data-diff="100">
 		<div class="overlay">
 			<div class="container">
 
-				<!-- mail icon -->
 				<div class="col-md-4 col-md-offset-4 text-center">
 				<i class="fa fa-envelope-o letter wow fadeInUp"></i>
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
 
-					<!-- subscribe form -->
 					<div class="subscribe-form wow fadeInUp">
 						<form class="news-letter mailchimp" action="" role="form" method="POST">
 						<input type="hidden" name="u" value="">
@@ -255,12 +252,12 @@
 		</div>
 	</div>
 </div>
-
+-->
 <!-- screenshot section -->
 <div id="screenshot">
 	<div class="container">
 		<div class="text-center">
-			<h2 class="wow fadeInLeft">Screenshots</h2>
+			<h2 class="wow fadeInLeft">Gallery</h2>
 			<div class="title-line wow fadeInRight"></div>
 		</div>
 		<div class="row screenshots">
@@ -308,7 +305,7 @@
 <div id="clients">
 	<div class="container">
 		<div class="text-center">
-			<h2 class="wow fadeInLeft">Clients</h2>
+			<h2 class="wow fadeInLeft">Testimonials</h2>
 			<div class="title-line wow fadeInRight"></div>
 		</div>
 		<div class="row">
@@ -382,7 +379,7 @@
 		<div class="text-center">
 
 			<!-- pricing title -->
-			<h2 class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">Packages</h2>
+			<h2 class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">About Me</h2>
 			<div class="title-line wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight; -webkit-animation-name: fadeInRight;"></div>
 		</div>
 		<div class="row package-option">
@@ -392,64 +389,56 @@
 			  <div class="price-box wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp; -webkit-animation-name: fadeInUp;">
 			   <div class="price-heading text-center">
 
-
-					<!-- package name -->
-					<h3>Basic</h3>
+					<h3>Robotics</h3>
 			   </div>
 
-			   <!-- price -->
 				<div class="price-group text-center">
-					<span class="dollar">$</span>
-					<span class="price">12</span>
-					<span class="time">/mo</span>
+					<span class="time"><strong>FIRST Tech Challenge</strong></span>
 				</div>
 
-				<!-- package features -->
 			   <ul class="price-feature text-center">
-				  <li><strong>300MB</strong> Disk Space</li>
-				  <li><strong>200MB</strong> Bandwidth</li>
-				  <li><strong>4</strong> Subdomains</li>
-				  <li><strong>6</strong> Email Accounts</li>
-				  <li><strike>Webmail Support</strike></li>
+				  <li>2024 onwards</li>
+				  <li>Qualifiers Finalist Award</li>
 			   </ul>
 
-			   <!-- package button -->
-			   <div class="price-footer text-center">
-				 <a class="btn btn-price" href="#">BUY NOW</a>
+				<div class="price-group text-center">
+					<span class="time"><strong>FIRST Lego League</strong></span>
 				</div>
+
+			   <ul class="price-feature text-center">
+				  <li>2022-2024</li>
+				  <li>2 Championship Awards</li>
+			   </ul>
+
 			  </div>
 			</div>
 
-			<!-- package 2 -->
 			<div class="col-sm-4">
 			  <div class="price-box wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; -webkit-animation-delay: 0.2s; animation-name: fadeInUp; -webkit-animation-name: fadeInUp;">
 			   <div class="price-heading text-center">
 
 
-			   <!-- package name -->
-				<h3>Standard</h3>
+				<h3>Tennis</h3>
 			   </div>
 
-			   <!-- price -->
-				<div class="price-group text-center">
-					<span class="dollar">$</span>
-					<span class="price">16</span>
-					<span class="time">/mo</span>
-				</div>
+			   <div class="price-group text-center">
+				<span class="time"><strong>Varsity Team</strong></span>
+			</div>
 
-				<!-- package features -->
-			   <ul class="price-feature text-center">
-				  <li><strong>600MB</strong> Disk Space</li>
-				  <li><strong>300MB</strong> Bandwidth</li>
-				  <li><strong>4</strong> Subdomains</li>
-				  <li><strong>12</strong> Email Accounts</li>
-				  <li><strike>Webmail Support</strike></li>
-			   </ul>
+		   <ul class="price-feature text-center">
+			  <li>High School Team</li>
+			  <li>Ranked Player</li>
+		   </ul>
 
-				<!-- package button -->
-			   <div class="price-footer text-center">
-				 <a class="btn btn-price" href="#">BUY NOW</a>
-				</div>
+			<div class="price-group text-center">
+				<span class="time"><strong>USTA</strong></span>
+			</div>
+
+		   <ul class="price-feature text-center">
+			  <li>U12 Boys L2 Nationals</li>
+			  <li>UTR 7.01</li>
+		   </ul>
+
 			  </div>
 			</div>
 
@@ -461,29 +450,27 @@
 
 
 					<!-- package name -->
-					<h3>Advance</h3>
+					<h3>Academics</h3>
 			   </div>
 
-			   <!-- price -->
-				<div class="price-group text-center">
-					<span class="dollar">$</span>
-					<span class="price">24</span>
-					<span class="time">/mo</span>
-				</div>
+			   <div class="price-group text-center">
+				<span class="time"><strong>Advanced Courses</strong></span>
+			</div>
 
-				<!-- package features -->
-			   <ul class="price-feature text-center">
-				  <li><strong>1.5GB</strong> Disk Space</li>
-				  <li><strong>1.2GB</strong> Bandwidth</li>
-				  <li><strong>14</strong> Subdomains</li>
-				  <li><strong>26</strong> Email Accounts</li>
-				  <li>Webmail Support</li>
-			   </ul>
+		   <ul class="price-feature text-center">
+				<li>Pre Calc</li>
+			  <li>Chemistry Honors</li>
+			  <li>GPA 4.2</li>
+		   </ul>
 
-			   <!-- package button -->
-			   <div class="price-footer text-center">
-				 <a class="btn btn-price" href="#">BUY NOW</a>
-				</div>
+			<div class="price-group text-center">
+				<span class="time"><strong>Clubs</strong></span>
+			</div>
+
+		   <ul class="price-feature text-center">
+			  <li>Econ</li>
+			  <li>Site Council</li>
+		   </ul>
 			  </div>
 			</div>
 
@@ -492,7 +479,7 @@
 		</div>
 	</div>
 </div>
-<!-- download section -->
+<!-- download section
 <div id="download">
 	<div class="action fullscreen parallax" style="background-image:url('images/bg.jpg');" data-img-width="2000" data-img-height="1334" data-diff="100">
 		<div class="overlay downloadSection">
@@ -517,7 +504,7 @@
 		</div>
 	</div>
 </div>
-
+-->
 <!-- footer -->
 <footer id="footer">
 	<div class="container">
