--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 				<ul class="nav navbar-nav">
 					<li><a href="#intro">What is The Knowledge Groove?</a></li>
 					<li><a href="#feature">Services</a></li>
-					<!--li><a href="#subscribe">Subscribe</a></li-->
 					<li><a href="#screenshot">Gallery</a></li>
 					<li><a href="#clients">Testimonials</a></li>
-					<li><a href="#package">About Me</a></li>
+					<li><a href="#subscribe">About Me</a></li>
+					<!--li><a href="#package">About Me</a></li-->
 					<!--<li><a href="#download">Download</a></li>-->
 				</ul>
 			  </div>
@@ -226,33 +226,6 @@
         </div>
     </section>
 
-<!-- subscribe section
-<div id="subscribe">
-	<div class="subscribe fullscreen parallax" style="background-image:url('images/bg.jpg');" data-img-width="1920" data-img-height="1281" data-diff="100">
-		<div class="overlay">
-			<div class="container">
-
-				<div class="col-md-4 col-md-offset-4 text-center">
-				<i class="fa fa-envelope-o letter wow fadeInUp"></i>
-				</div>
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-
-					<div class="subscribe-form wow fadeInUp">
-						<form class="news-letter mailchimp" action="" role="form" method="POST">
-						<input type="hidden" name="u" value="">
-						<input type="hidden" name="id" value="">
-						<input class="form-control" type="email" name="" placeholder="Your email..." required="">
-							<button type="submit" class="subscribe-btn btn">SUBSCRIBE</button>
-						</form>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-</div>
--->
 <!-- screenshot section -->
 <div id="screenshot">
 	<div class="container">
@@ -374,12 +347,37 @@
 		</div>
 	</div>
 </div>
+<!-- subscribe section -->
+<div id="subscribe">
+	<div class="subscribe fullscreen parallax" style="background-image:url('images/bg.jpg');" data-img-width="1920" data-img-height="1281" data-diff="100">
+		<div class="overlay">
+			<div class="container">
+				<div class="text-center">
+
+					<!-- pricing title -->
+					<h2 class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">About Me</h2>
+					<div class="title-line wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight; -webkit-animation-name: fadeInRight;"></div>
+				</div>
+				<!--div class="col-md-4 col-md-offset-4 text-center">
+				<i class="fa fa-envelope-o letter wow fadeInUp"></i>
+				</div-->
+				<div class="col-md-8 col-md-offset-2 text-center">
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.
+					</p>
+					<p>Dummy</p>
+					<p>Dummy</p>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</div>
 <div id="package">
 	<div class="container">
 		<div class="text-center">
 
 			<!-- pricing title -->
-			<h2 class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">About Me</h2>
+			<h2 class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">Interests</h2>
 			<div class="title-line wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight; -webkit-animation-name: fadeInRight;"></div>
 		</div>
 		<div class="row package-option">
@@ -450,30 +448,14 @@
 
 
 					<!-- package name -->
-					<h3>Academics</h3>
+					<h3>Others</h3>
 			   </div>
-
-			   <div class="price-group text-center">
-				<span class="time"><strong>Advanced Courses</strong></span>
-			</div>
-
-		   <ul class="price-feature text-center">
-				<li>Pre Calc</li>
-			  <li>Chemistry Honors</li>
-			  <li>GPA 4.2</li>
-		   </ul>
-
-			<div class="price-group text-center">
-				<span class="time"><strong>Clubs</strong></span>
-			</div>
-
-		   <ul class="price-feature text-center">
-			  <li>Econ</li>
-			  <li>Site Council</li>
-		   </ul>
+			   <ul class="price-feature text-center">
+				<li>Piano</li>
+				<li>Site Council</li>
+			 </ul>
 			  </div>
 			</div>
-
 
 
 		</div>
@@ -512,7 +494,7 @@
 			<!-- social links -->
 				<div class="social text-center">
 					<ul>
-						<li><a class="wow fadeInUp" href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+						<li><a class="wow fadeInUp" href="https://spotify.com/"><i class="fa fa-twitter"></i></a></li>
 						<li><a class="wow fadeInUp" href="https://www.facebook.com/" data-wow-delay="0.2s"><i class="fa fa-facebook"></i></a></li>
 						<li><a class="wow fadeInUp" href="https://plus.google.com/" data-wow-delay="0.4s"><i class="fa fa-google-plus"></i></a></li>
 						<li><a class="wow fadeInUp" href="https://instagram.com/" data-wow-delay="0.6s"><i class="fa fa-instagram"></i></a></li>
