Update code as of 02/09/2025
- Podcast image update
- Gallery images update
- About ishaan updated
- email contact added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Brand html5 Multipurpose Landing Page for Apps</title>
+<title>KnowledgeGroove Landing Page </title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 <!-- CSS Files -->
@@ -48,9 +48,7 @@
 					<li><a href="#feature">Services</a></li>
 					<li><a href="#screenshot">Gallery</a></li>
 					<li><a href="#clients">Testimonials</a></li>
-					<li><a href="#subscribe">About Me</a></li>
-					<!--li><a href="#package">About Me</a></li-->
-					<!--<li><a href="#download">Download</a></li>-->
+					<li><a href="#package">About Ishaan</a></li>
 				</ul>
 			  </div>
 		</div>
@@ -74,19 +72,6 @@
 					<div class="landing-text wow fadeInLeft">
 						<p> Knowledge Is The Best Weapon Known to Mankind</p>
 					</div>
-
-					
-					<!-- header button -->
-					<!--
-					<div class="head-btn wow fadeInLeft">
-						<a href="#" class="btn-primary app-store">
-						<i class="fa fa-apple"></i> <span> App Store</span>
-						</a>
-						<a href="#" class="btn-primary play-market">
-						<i class="fa fa-android"></i> <span> Google Play</span>
-						</a>
-					</div>
-				-->
 
 
 				</div>
@@ -115,8 +100,6 @@
 				<h2>What is The Knowledge Groove?</h2>
 				<p> At the Knowledge Groove, we believe that learning should be an engaging and dynamic experience. We are a dedicated language school helping with our services globally and a thought-provoking podcast series focusing on empowering people by providing them with interesting knowledge. <bold></bold> </p>
 
-				<!-- <div class="btn-section"><a href="#download" class="btn-default">Download Now</a></div> -->
-
 			</div>
 
 		</div>
@@ -144,7 +127,7 @@
 					<i class="fa fa-paint-brush wow fadeInUp"></i>
 					<div class="inner">
 						<h4>The Knowledge Groove Podcast</h4>
-						<p> The Knowledge Groove Podcast is a platform where we dive into a wide range of fascinating topics across history, science, business, and economics. Whether it's the story behind a historical event, the rise of a global brand, or a deep dive into the groundbreaking scientific discoveries, we aim to share interesting and though-provoking information that sparks curiosity and inspires learning. 
+						<p> The Knowledge Groove Podcast is a platform where we dive into a wide range of fascinating topics across history, science, business, and economics. Whether it's the story behind a historical event, the rise of a global brand, or a deep dive into the groundbreaking scientific discoveries, we aim to share interesting and though-provoking information that sparks curiosity and inspires learning.
 						</p>
 					</div>
 				</div>
@@ -186,7 +169,7 @@
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading"> A thought-provoking everyone must listen to! </h4>
-                                <p> Link: https://open.spotify.com/show/5GgvbJT6WznJCmIX6OeEGy?si=5434d6dd02f74782 </p>
+                                <p> Sounds interesting !!!, Yeah, please check <a href="https://open.spotify.com/show/5GgvbJT6WznJCmIX6OeEGy?si=5434d6dd02f74782">  Spotify Channel </a></p>
                             </div>
                         </div>
                     </div>
@@ -199,27 +182,14 @@
                             </div>
                             <div class="media-body">
                                 <h4 class="media-heading"> An Academy focused on helping you </h4>
-                                <p> Register Now!: </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="feature-item">
-
-                        <div class="media">
-                            <div class="pull-left icon" href="#">
-                                <i class="fa fa-recycle"></i>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading">Rapid customer support</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</p>
+                                <p> For more details , please  <a href="#contact"> contact </a> </p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 wow fadeInLeft animated" data-wow-delay=".8s" style="visibility: visible; animation-delay: 0.8s; -webkit-animation-delay: 0.8s; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">
                     <div class="block">
-                        <img class="img-responsive" src="images/featured-app.png" alt="">
+                        <img class="img-responsive" src="images/podcast.png" alt="">
                     </div>
                 </div>
             </div>
@@ -234,40 +204,38 @@
 			<div class="title-line wow fadeInRight"></div>
 		</div>
 		<div class="row screenshots">
-
 			<div id="screenshots" class="owl-carousel">
-
 				<!-- screenshot images -->
 				<div class="screen wow fadeInUp">
-					<a href="images/img1.jpg" data-toggle="lightbox"><img src="images/img1.jpg" alt="Screenshot"></a>
+					<a href="images/img1.jpg" data-toggle="lightbox"><img src="images/gallery1.jpg" alt="Screenshot"></a>
 				</div>
 
 				<div class="screen wow fadeInUp" data-wow-delay="0.1s">
-					<a href="images/img2.jpg" data-toggle="lightbox"><img src="images/img2.jpg" alt="Screenshot"></a>
+					<a href="images/img2.jpg" data-toggle="lightbox"><img src="images/gallery2.jpg" alt="Screenshot"></a>
 				</div>
 
 				<div class="screen wow fadeInUp" data-wow-delay="0.2s">
-					<a href="images/img3.jpg" data-toggle="lightbox"><img src="images/img3.jpg" alt="Screenshot"></a>
+					<a href="images/img3.jpg" data-toggle="lightbox"><img src="images/gallery3.jpg" alt="Screenshot"></a>
 				</div>
 
 				<div class="screen wow fadeInUp" data-wow-delay="0.3s">
-					<a href="images/img4.jpg" data-toggle="lightbox"><img src="images/img4.jpg" alt="Screenshot"></a>
+					<a href="images/img4.jpg" data-toggle="lightbox"><img src="images/gallery4.jpg" alt="Screenshot"></a>
 				</div>
 
 				<div class="screen wow fadeInUp" data-wow-delay="0.4s">
-					<a href="images/img5.jpg" data-toggle="lightbox"><img src="images/img5.jpg" alt="Screenshot"></a>
+					<a href="images/img5.jpg" data-toggle="lightbox"><img src="images/gallery5.jpg" alt="Screenshot"></a>
 				</div>
 
 				<div class="screen wow fadeInUp" data-wow-delay="0.5s">
-					<a href="images/img6.jpg" data-toggle="lightbox"><img src="images/img6.jpg" alt="Screenshot"></a>
+					<a href="images/img6.jpg" data-toggle="lightbox"><img src="images/gallery6.jpg" alt="Screenshot"></a>
 				</div>
 
 				<div class="screen wow fadeInUp" data-wow-delay="0.6s">
-					<a href="images/img7.jpg" data-toggle="lightbox"><img src="images/img7.jpg" alt="Screenshot"></a>
+					<a href="images/img7.jpg" data-toggle="lightbox"><img src="images/gallery7.jpg" alt="Screenshot"></a>
 				</div>
 
 				<div class="screen wow fadeInUp" data-wow-delay="0.7s">
-					<a href="images/img8.jpg" data-toggle="lightbox"><img src="images/img8.jpg" alt="Screenshot"></a>
+					<a href="images/img8.jpg" data-toggle="lightbox"><img src="images/gallery8.jpg" alt="Screenshot"></a>
 				</div>
 			</div>
 		</div>
@@ -284,64 +252,21 @@
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-1">
 			   <div id="owl-clients" class="owl-carousel owl-theme wow fadeInUp">
-
 					<!-- Clients 1 -->
 					<div class="clients-item">
 						<div class="client-pic text-center">
-
 							<!-- client photo -->
-							<img src="images/client.jpg" alt="client">
+							<img src="images/client1.jpg" alt="client">
 						</div>
 						<div class="box">
-
 							<!-- Clients content -->
-							<p class="message text-center">"Printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type dummy text of the printing."</p>
+							<p class="message text-center">"Ishaan, thanks for doing this and helping me improve, You are doing a great job !!!"</p>
 						</div>
 						<div class="client-info text-center">
-
 						<!-- client name -->
-							John Doe, <span class="company">Google</span>
+							Rahul, <span class="company">Student</span>
 						</div>
 					</div>
-
-					<!-- Clients 2 -->
-					<div class="clients-item">
-						<div class="client-pic text-center">
-
-							<!-- client photo -->
-							<img src="images/client2.jpg" alt="client">
-						</div>
-						<div class="box">
-
-							<!-- Clients content -->
-							<p class="message text-center">"Lorem Ipsum is simply dummy text of the printing and when an unknown printer took a galley of type dummy text of the printing and typesetting industry and scrambled."</p>
-						</div>
-						<div class="client-info text-center">
-
-							<!-- client name -->
-							Glen Micheal, <span class="company">CN Technology</span>
-						</div>
-					</div>
-
-					<!-- Clients 3 -->
-					<div class="clients-item">
-						<div class="client-pic text-center">
-
-							<!-- client photo -->
-							<img src="images/client3.jpg" alt="client">
-						</div>
-						<div class="box">
-
-							<!-- Clients content -->
-							<p class="message text-center">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer."</p>
-						</div>
-						<div class="client-info text-center">
-
-							<!-- client name -->
-							Chris Russel, <span class="company">Facebook</span>
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</div>
@@ -377,7 +302,7 @@
 		<div class="text-center">
 
 			<!-- pricing title -->
-			<h2 class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">Interests</h2>
+			<h2 class="wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft; -webkit-animation-name: fadeInLeft;">About Ishaan</h2>
 			<div class="title-line wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight; -webkit-animation-name: fadeInRight;"></div>
 		</div>
 		<div class="row package-option">
@@ -414,8 +339,6 @@
 			<div class="col-sm-4">
 			  <div class="price-box wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; -webkit-animation-delay: 0.2s; animation-name: fadeInUp; -webkit-animation-name: fadeInUp;">
 			   <div class="price-heading text-center">
-
-
 				<h3>Tennis</h3>
 			   </div>
 
@@ -424,8 +347,7 @@
 			</div>
 
 		   <ul class="price-feature text-center">
-			  <li>High School Team</li>
-			  <li>Ranked Player</li>
+			  <li>USTA Ranked Player</li>
 		   </ul>
 
 			<div class="price-group text-center">
@@ -434,7 +356,6 @@
 
 		   <ul class="price-feature text-center">
 			  <li>U12 Boys L2 Nationals</li>
-			  <li>UTR 7.01</li>
 		   </ul>
 
 			  </div>
@@ -445,62 +366,45 @@
 			  <div class="price-box wow fadeInUp animated" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; -webkit-animation-delay: 0.4s; animation-name: fadeInUp; -webkit-animation-name: fadeInUp;">
 			   <div class="price-heading text-center">
 
-
-
 					<!-- package name -->
 					<h3>Others</h3>
 			   </div>
-			   <ul class="price-feature text-center">
-				<li>Piano</li>
-				<li>Site Council</li>
-			 </ul>
-			  </div>
+			   <div class="price-group text-center">
+				<span class="time"><strong>Advanced Courses</strong></span>
 			</div>
 
+			<div class="price-group text-center">
+				<span class="time"><strong>Clubs</strong></span>
+			</div>
 
+		   <ul class="price-feature text-center">
+			  <li>Econ</li>
+		   </ul>
+			  </div>
+			</div>
 		</div>
 	</div>
 </div>
-<!-- download section
-<div id="download">
+<!-- download section -->
+<div id="contact">
 	<div class="action fullscreen parallax" style="background-image:url('images/bg.jpg');" data-img-width="2000" data-img-height="1334" data-diff="100">
 		<div class="overlay downloadSection">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
-						<h2 class="wow fadeInLeft">Get Your free Download of Juke App today!</h2>
-						<p class="download-text wow fadeInRight">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type dummy text of the printing and typesetting industry and scrambled.</p>
-						<div class="btn-section">
-
-						<a href="#" class="btn-primary app-store">
-						<i class="fa fa-apple"></i> <span> App Store</span>
-						</a>
-						<a href="#" class="btn-primary play-market">
-						<i class="fa fa-android"></i> <span> Google Play</span>
-						</a>
-
-						</div>
+						<h2 class="wow fadeInLeft">Interested and want to contact Ishaan !!!</h2>
+						<p class="download-text wow fadeInRight">If you are interested to know more and get in touch with Ishaan , please send an email to</p>
+						<a href="mailto:contact@knowledgegroove.com"> <span style="color:orange;"> <b>contact@knowledgegroove.com </b></span></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
--->
 <!-- footer -->
 <footer id="footer">
 	<div class="container">
 		<div class="col-sm-4 col-sm-offset-4">
-			<!-- social links -->
-				<div class="social text-center">
-					<ul>
-						<li><a class="wow fadeInUp" href="https://spotify.com/"><i class="fa fa-twitter"></i></a></li>
-						<li><a class="wow fadeInUp" href="https://www.facebook.com/" data-wow-delay="0.2s"><i class="fa fa-facebook"></i></a></li>
-						<li><a class="wow fadeInUp" href="https://plus.google.com/" data-wow-delay="0.4s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a class="wow fadeInUp" href="https://instagram.com/" data-wow-delay="0.6s"><i class="fa fa-instagram"></i></a></li>
-					</ul>
-				</div>
-			<!--div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Juke 2015 - Template by <a href="http://www.webthemez.com">Webthemez</a></div-->
 			<a href="#" class="scrollToTop"><i class="fa fa-arrow-circle-o-up"></i></a>
 		</div>
 	</div>
