--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<li><a href="#screenshot">Gallery</a></li>
 					<li><a href="#clients">Testimonials</a></li>
 					<li><a href="#package">About Ishaan</a></li>
+					<li><a href="ai.html">AI Tool</a></li>
 				</ul>
 			  </div>
 		</div>
@@ -71,6 +72,7 @@
 
 					<div class="landing-text wow fadeInLeft">
 						<p> Knowledge Is The Best Weapon Known to Mankind</p>
+						<p><a href="ai.html" class="btn btn-primary btn-lg" role="button">Try the AI Tool</a></p>
 					</div>
 
 
